# ekizu

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  docs.yml
cmake/: CompilerWarnings.cmake  Config.cmake.in
docs/: README.md  doxide.yaml  mkdocs.yaml  requirements.txt
docs/docs/: building-a-discord-bot.md  creating-a-bot-token.md  creating-a-discord-bot.md  getting-started.md
docs/material/overrides/: home.html  main.html
examples/: CMakeLists.txt  airhorn.cpp  avatar.cpp  dm_ping_pong.cpp  mic_monitoring.cpp  ping_pong.cpp  simple.cpp  simple_with_logging.cpp
examples/components/: button.cpp  select_menu.cpp
include/ekizu/: activity_flags.hpp  application_command_data.hpp  application_command_data_resolved.hpp  application_flags.hpp  async_main.hpp  attachment.hpp  ban.hpp  ban_manager.hpp  channel.hpp  client_options.hpp  command_data.hpp  command_data_resolved.hpp  current_user.hpp  discord_api.hpp  discord_request_manager.hpp  embed.hpp  embed_builder.hpp  emoji.hpp  emoji_manager.hpp  event.hpp  event_dispatcher.hpp  event_emitter.hpp  event_handler.hpp  event_manager.hpp  function_view.hpp  guild.hpp  guild_feature.hpp  guild_interaction.hpp  guild_manager.hpp  guild_member.hpp  guild_preview.hpp  guild_scheduled_event.hpp  http.hpp  http_client.hpp  inflater.hpp  intents.hpp  interaction.hpp  interaction_type.hpp  invite.hpp  json_util.hpp  (+32 more)
include/ekizu/gateway/: ban_add.hpp  ban_remove.hpp  channel_create.hpp  channel_delete.hpp  channel_pins_update.hpp  channel_update.hpp  guild_ban_add.hpp  guild_ban_remove.hpp  guild_create.hpp  guild_delete.hpp  guild_emojis_update.hpp  guild_integrations_update.hpp  guild_member_add.hpp  guild_member_remove.hpp  guild_member_update.hpp  guild_members_chunk.hpp  guild_role_create.hpp  guild_role_delete.hpp  guild_role_update.hpp  guild_scheduled_event_create.hpp  guild_scheduled_event_delete.hpp  guild_scheduled_event_update.hpp  guild_scheduled_event_user_add.hpp  guild_scheduled_event_user_remove.hpp  guild_stickers_update.hpp  guild_update.hpp  integration_create.hpp  integration_delete.hpp  integration_update.hpp  interaction_create.hpp  invite_create.hpp  invite_delete.hpp  log.hpp  message_create.hpp  message_delete.hpp  message_delete_bulk.hpp  message_reaction_add.hpp  message_reaction_remove.hpp  message_reaction_remove_all.hpp  message_reaction_remove_emoji.hpp  (+19 more)
include/ekizu/request/: add_guild_member.hpp  add_guild_member_role.hpp  bulk_delete_messages.hpp  create_dm.hpp  create_guild.hpp  create_guild_channel.hpp  create_invite.hpp  create_message.hpp  create_reaction.hpp  crosspost_message.hpp  delete_all_reactions.hpp  delete_all_reactions_for_emoji.hpp  delete_channel.hpp  delete_channel_permission.hpp  delete_guild.hpp  delete_message.hpp  delete_own_reaction.hpp  delete_user_reaction.hpp  edit_channel_permissions.hpp  edit_message.hpp  follow_announcement_channel.hpp  get_channel.hpp  get_channel_invites.hpp  get_channel_message.hpp  get_channel_messages.hpp  get_current_user.hpp  get_guild.hpp  get_guild_ban.hpp  get_guild_bans.hpp  get_guild_channels.hpp  get_guild_invites.hpp  get_guild_member.hpp  get_guild_preview.hpp  get_pinned_messages.hpp  get_reactions.hpp  get_user.hpp  interaction_client.hpp  list_active_guild_threads.hpp  list_guild_members.hpp  modify_channel.hpp  (+11 more)
include/ekizu/request/interaction/: create_response.hpp  get_original_response.hpp
src/: application_command_data.cpp  application_command_data_resolved.cpp  attachment.cpp  ban.cpp  channel.cpp  command_data.cpp  command_data_resolved.cpp  current_user.cpp  discord_api.cpp  discord_request_manager.cpp  embed.cpp  emoji.cpp  emoji_manager.cpp  guild.cpp  guild_emojis_update.cpp  guild_feature.cpp  guild_integrations_update.cpp  guild_interaction.cpp  guild_member.cpp  guild_preview.cpp  guild_scheduled_event.cpp  http.cpp  http_client.cpp  inflater.cpp  interaction.cpp  invite.cpp  mention.cpp  message.cpp  message_component.cpp  message_component_data.cpp  message_manager.cpp  partial_application.cpp  partial_guild.cpp  partial_member.cpp  permissions.cpp  presence.cpp  rate_limiter.cpp  role.cpp  shard.cpp  snowflake.cpp  (+7 more)
src/gateway/: ban_add.cpp  ban_remove.cpp  channel_create.cpp  channel_delete.cpp  channel_pins_update.cpp  channel_update.cpp  guild_ban_add.cpp  guild_ban_remove.cpp  guild_create.cpp  guild_delete.cpp  guild_member_add.cpp  guild_member_remove.cpp  guild_member_update.cpp  guild_members_chunk.cpp  guild_role_create.cpp  guild_role_delete.cpp  guild_role_update.cpp  guild_scheduled_event_create.cpp  guild_scheduled_event_delete.cpp  guild_scheduled_event_update.cpp  guild_scheduled_event_user_add.cpp  guild_scheduled_event_user_remove.cpp  guild_stickers_update.cpp  guild_update.cpp  integration_create.cpp  integration_delete.cpp  integration_update.cpp  interaction_create.cpp  invite_create.cpp  invite_delete.cpp  log.cpp  message_create.cpp  message_delete.cpp  message_delete_bulk.cpp  message_reaction_add.cpp  message_reaction_remove.cpp  message_reaction_remove_all.cpp  message_reaction_remove_emoji.cpp  message_update.cpp  presence_update.cpp  (+16 more)
src/request/: add_guild_member.cpp  add_guild_member_role.cpp  bulk_delete_messages.cpp  create_dm.cpp  create_guild.cpp  create_guild_channel.cpp  create_invite.cpp  create_message.cpp  create_reaction.cpp  create_response.cpp  crosspost_message.cpp  delete_all_reactions.cpp  delete_all_reactions_for_emoji.cpp  delete_channel.cpp  delete_channel_permission.cpp  delete_guild.cpp  delete_message.cpp  delete_own_reaction.cpp  delete_user_reaction.cpp  edit_channel_permissions.cpp  edit_message.cpp  follow_announcement_channel.cpp  get_channel.cpp  get_channel_invites.cpp  get_channel_message.cpp  get_channel_messages.cpp  get_current_user.cpp  get_guild.cpp  get_guild_ban.cpp  get_guild_bans.cpp  get_guild_channels.cpp  get_guild_invites.cpp  get_guild_member.cpp  get_guild_preview.cpp  get_original_response.cpp  get_pinned_messages.cpp  get_reactions.cpp  get_user.cpp  interaction_client.cpp  list_active_guild_threads.cpp  (+13 more)
(+2 files in other folders)
